2023/9cc/syntax.ebnf
program = stmt*;

stmt = expr ";";

expr = assign;

assign = equality ("=" assign)?;

equality = relational ("==" relational | "!=" relational)*;

relational = add ("<=" add | ">=" add | "<" add | ">" add)*;

add = mul ("+" mul | "-" mul)*;

mul = unary ("*" unary | "/" unary)*;

unary = ("+" | "-")? primary;

primary = num | ident | "(" expr ")";
